--- a/dosa.html
+++ b/dosa.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Dosa recipe</h1>
-    <img src="recipes/dish 3.jpg" height="350" width="350" alt="Masala Dosa">
+    <img src="recipes/dish 3.JPG" height="350" width="350" alt="Masala Dosa">
     <h1>Description</h1>
     <p>Dosa is the ever-popular South Indian breakfast of crispy crepes made with ground rice and lentil batter that is fermented. With just a handful of ingredients learn to make the classic Dosa recipe from scratch with my easy video and step-by-step photos. I also cover making your own dosa batter in a blender or mixer-grinder, tips on fermentation and cooking dosa to help you make the best dosa  crispy, soft and so good to dunk in a bowl of Coconut Chutney or piping hot Sambar</p>
     
