--- a/lasagna.html
+++ b/lasagna.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="recipes/dish 2.jpg " height="350" width="450" alt="Cheesy Sausage Lasagna Soup
-    ">
+    <img src="recipes/dish 2.jpg " height="350" width="450" alt="">
     <h1>Description</h1>
     <p>A fantastic way to enjoy lasagna without all the fuss! I thought using frozen ravioli already filled with cheese instead of layering layers of noodles and cheese would make a great dish so easy. It all comes together; just scoop it out, serve with a salad, and enjoy.</p>
     <h1>Ingrediants</h1>
