--- a/pavbhaji.html
+++ b/pavbhaji.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pavbhaji Recipe</h1>
-    <img src="recipes/dish 4.jpg" height="350" width="350" alt="Pavbhaji">
+    <img src="recipes/dish 4.jpg" height="350" width="350" alt="">
     <h1>Description</h1>
     <p>Want a meal that's hearty, satisfying and delightful too? Here's it mashed spiced vegetables; served with a side of cotton-like soft, buttery dinner rolls, crunchy onions, herby fresh coriander and tangy lemon. To sum up, the Pav Bhaji – a famous street food from the ‘city of dreams,’ Mumbai.
          This Pav Bhaji Recipe is going to be create fireworks on your palate!</p>
